--- a/src/sample_ucf.ucf
+++ b/src/sample_ucf.ucf
@@ -38,45 +38,45 @@ NET A(5)           LOC="P66"  | IOSTANDARD=LVTTL;                               
 NET A(6)           LOC="P67"  | IOSTANDARD=LVTTL;                                # A6
 NET A(7)           LOC="P75"  | IOSTANDARD=LVTTL;                                # A7
 NET A(8)           LOC="P79"  | IOSTANDARD=LVTTL;                                # A8
-NET A(9)           LOC="P81"  | IOSTANDARD=LVTTL;                                # A9
-NET A(10)          LOC="P83"  | IOSTANDARD=LVTTL;                                # A10
-NET A(11)          LOC="P85"  | IOSTANDARD=LVTTL;                                # A11
-NET A(12)          LOC="P88"  | IOSTANDARD=LVTTL;                                # A12
-NET A(13)          LOC="P93"  | IOSTANDARD=LVTTL;                                # A13
-NET A(14)          LOC="P98"  | IOSTANDARD=LVTTL;                                # A14
-NET A(15)          LOC="P100" | IOSTANDARD=LVTTL;                                # A15
-NET B(0)           LOC="P99"  | IOSTANDARD=LVTTL;                                # B0
-NET B(1)           LOC="P97"  | IOSTANDARD=LVTTL;                                # B1
-NET B(2)           LOC="P92"  | IOSTANDARD=LVTTL;                                # B2
-NET B(3)           LOC="P87"  | IOSTANDARD=LVTTL;                                # B3
-NET B(4)           LOC="P84"  | IOSTANDARD=LVTTL;                                # B4
-NET B(5)           LOC="P82"  | IOSTANDARD=LVTTL;                                # B5
-NET B(6)           LOC="P80"  | IOSTANDARD=LVTTL;                                # B6
-NET B(7)           LOC="P78"  | IOSTANDARD=LVTTL;                                # B7
-NET B(8)           LOC="P74"  | IOSTANDARD=LVTTL;                                # B8
-NET B(9)           LOC="P95"  | IOSTANDARD=LVTTL;                                # B9
-NET B(10)          LOC="P62"  | IOSTANDARD=LVTTL;                                # B10
-NET B(11)          LOC="P59"  | IOSTANDARD=LVTTL;                                # B11
-NET B(12)          LOC="P57"  | IOSTANDARD=LVTTL;                                # B12
-NET B(13)          LOC="P55"  | IOSTANDARD=LVTTL;                                # B13
-NET B(14)          LOC="P50"  | IOSTANDARD=LVTTL;                                # B14
-NET B(15)          LOC="P47"  | IOSTANDARD=LVTTL;                                # B15
-NET C(0)           LOC="P114" | IOSTANDARD=LVTTL;                                # C0
-NET C(1)           LOC="P115" | IOSTANDARD=LVTTL;                                # C1
-NET C(2)           LOC="P116" | IOSTANDARD=LVTTL;                                # C2
-NET C(3)           LOC="P117" | IOSTANDARD=LVTTL;                                # C3
-NET C(4)           LOC="P118" | IOSTANDARD=LVTTL;                                # C4
-NET C(5)           LOC="P119" | IOSTANDARD=LVTTL;                                # C5
-NET C(6)           LOC="P120" | IOSTANDARD=LVTTL;                                # C6
-NET C(7)           LOC="P121" | IOSTANDARD=LVTTL;                                # C7
-NET C(8)           LOC="P123" | IOSTANDARD=LVTTL;                                # C8
-NET C(9)           LOC="P124" | IOSTANDARD=LVTTL;                                # C9
-NET C(10)          LOC="P126" | IOSTANDARD=LVTTL;                                # C10
-NET C(11)          LOC="P127" | IOSTANDARD=LVTTL;                                # C11
-NET C(12)          LOC="P131" | IOSTANDARD=LVTTL;                                # C12
-NET C(13)          LOC="P132" | IOSTANDARD=LVTTL;                                # C13
-NET C(14)          LOC="P133" | IOSTANDARD=LVTTL;                                # C14
-NET C(15)          LOC="P134" | IOSTANDARD=LVTTL;                                # C15
+# NET A(9)           LOC="P81"  | IOSTANDARD=LVTTL;                                # A9
+# NET A(10)          LOC="P83"  | IOSTANDARD=LVTTL;                                # A10
+# NET A(11)          LOC="P85"  | IOSTANDARD=LVTTL;                                # A11
+# NET A(12)          LOC="P88"  | IOSTANDARD=LVTTL;                                # A12
+# NET A(13)          LOC="P93"  | IOSTANDARD=LVTTL;                                # A13
+# NET A(14)          LOC="P98"  | IOSTANDARD=LVTTL;                                # A14
+# NET A(15)          LOC="P100" | IOSTANDARD=LVTTL;                                # A15
+# NET B(0)           LOC="P99"  | IOSTANDARD=LVTTL;                                # B0
+# NET B(1)           LOC="P97"  | IOSTANDARD=LVTTL;                                # B1
+# NET B(2)           LOC="P92"  | IOSTANDARD=LVTTL;                                # B2
+# NET B(3)           LOC="P87"  | IOSTANDARD=LVTTL;                                # B3
+# NET B(4)           LOC="P84"  | IOSTANDARD=LVTTL;                                # B4
+# NET B(5)           LOC="P82"  | IOSTANDARD=LVTTL;                                # B5
+# NET B(6)           LOC="P80"  | IOSTANDARD=LVTTL;                                # B6
+# NET B(7)           LOC="P78"  | IOSTANDARD=LVTTL;                                # B7
+# NET B(8)           LOC="P74"  | IOSTANDARD=LVTTL;                                # B8
+# NET B(9)           LOC="P95"  | IOSTANDARD=LVTTL;                                # B9
+# NET B(10)          LOC="P62"  | IOSTANDARD=LVTTL;                                # B10
+# NET B(11)          LOC="P59"  | IOSTANDARD=LVTTL;                                # B11
+# NET B(12)          LOC="P57"  | IOSTANDARD=LVTTL;                                # B12
+# NET B(13)          LOC="P55"  | IOSTANDARD=LVTTL;                                # B13
+# NET B(14)          LOC="P50"  | IOSTANDARD=LVTTL;                                # B14
+# NET B(15)          LOC="P47"  | IOSTANDARD=LVTTL;                                # B15
+# NET C(0)           LOC="P114" | IOSTANDARD=LVTTL;                                # C0
+# NET C(1)           LOC="P115" | IOSTANDARD=LVTTL;                                # C1
+# NET C(2)           LOC="P116" | IOSTANDARD=LVTTL;                                # C2
+# NET C(3)           LOC="P117" | IOSTANDARD=LVTTL;                                # C3
+# NET C(4)           LOC="P118" | IOSTANDARD=LVTTL;                                # C4
+# NET C(5)           LOC="P119" | IOSTANDARD=LVTTL;                                # C5
+# NET C(6)           LOC="P120" | IOSTANDARD=LVTTL;                                # C6
+# NET C(7)           LOC="P121" | IOSTANDARD=LVTTL;                                # C7
+# NET C(8)           LOC="P123" | IOSTANDARD=LVTTL;                                # C8
+# NET C(9)           LOC="P124" | IOSTANDARD=LVTTL;                                # C9
+# NET C(10)          LOC="P126" | IOSTANDARD=LVTTL;                                # C10
+# NET C(11)          LOC="P127" | IOSTANDARD=LVTTL;                                # C11
+# NET C(12)          LOC="P131" | IOSTANDARD=LVTTL;                                # C12
+# NET C(13)          LOC="P132" | IOSTANDARD=LVTTL;                                # C13
+# NET C(14)          LOC="P133" | IOSTANDARD=LVTTL;                                # C14
+# NET C(15)          LOC="P134" | IOSTANDARD=LVTTL;                                # C15
 # NET SDRAM_ADDR(0)  LOC="P140" | IOSTANDARD=LVTTL;                                # SDRAM_ADDR0
 # NET SDRAM_ADDR(1)  LOC="P139" | IOSTANDARD=LVTTL;                                # SDRAM_ADDR1
 # NET SDRAM_ADDR(2)  LOC="P138" | IOSTANDARD=LVTTL;                                # SDRAM_ADDR2
